--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://nifontovsv.github.io/awward",
 	"name": "awward",
 	"private": true,
 	"version": "0.0.0",
@@ -7,7 +8,8 @@
 		"start": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "npm run build && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
@@ -32,6 +34,7 @@
 		"eslint": "^9.19.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
+		"gh-pages": "^6.3.0",
 		"globals": "^15.14.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.22.0",
