--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 	],
 	"compilerOptions": {
 		"jsx": "react-jsx",
-		"types": ["react", "react-dom"]
+		"types": ["react", "react-dom"],
+		"lib": ["dom", "esnext"]
 	}
 }
